--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,8 @@
-server:
-  port: 8080
-
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/route_planner
-    username: root
-    password:
+    url: '${DB_URL}'
+    username: '${DB_USERNAME}'
+    password: '${DB_PASSWORD}'
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
@@ -16,4 +13,4 @@ spring:
 
 route:
   find:
-    url: http://localhost:15002/api/v1/mock/route
+    url: https://inotravelplanner.azurewebsites.net/api/routes/
